--- a/assets/main/css/resptt.css
+++ b/assets/main/css/resptt.css
@@ -327,6 +327,13 @@ a.room-join {
 .chat-message__wrapper {
     display: flex;
     margin: 0 0 10px 0;
+    opacity: 0;
+    animation: chat-message__animation 1s ease forwards;
+}
+
+@keyframes chat-message__animation {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 
 .userpic-wrapper {
@@ -356,13 +363,22 @@ a.room-join {
 }
 
 .chat-message__message {
+    position: relative;
     border-radius: 22px;
     width: auto;
     padding: 12px;
     max-width: 236px;
+    min-width: 65px;
     min-height: 44px;
     background-color: #fff;
     border: 1px solid #efefef;
+}
+
+.chat-message__date {
+    position: absolute;
+    font-size: 11px;
+    right: 10px;
+    bottom: 1px;
 }
 
 .chat-message__wrapper.incoming .chat-message__message {
@@ -387,7 +403,7 @@ a.room-join {
     width: 100%;
     resize: none;
     outline: none;
-    padding: 12px;
+    padding: 12px 82px 12px 12px;
     border: 2px solid #195a70;
     border-radius: 0 0 5px 5px;
 }
